Text added weather search

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -16,6 +16,7 @@
             <input placeholder="Location">
             <button>Search</button>
         </form>
+       <strong> <p id="msg" ></p></strong>
         <p id="msg1"></p>
         <p id="msg2"></p>
         <p id="msg3"></p>
